# matrix-groupme

./: .gitignore  pyproject.toml
matrix_groupme/: __main__.py  config.py  example-config.yaml  groupme.py  matrix.py  portal.py  puppet.py  types.py  user.py  version.py
matrix_groupme/commands/: __init__.py
matrix_groupme/db/: __init__.py  portal.py  puppet.py  user.py
matrix_groupme/db/upgrade/: __init__.py  v001_initial_portal.py  v002_init_puppet.py  v002_initial_puppet.py  v003_initial_user.py  v004_user_auth_token.py  v005_puppet_is_registered.py
matrix_groupme/util/: __init__.py
