[project]
name = "matrix-groupme"
version = "0.1.0"
description = "A bridge that connects GroupMe and Matrix."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "asyncpg>=0.30.0",
    "commonmark>=0.9.1",
    "httpx[http2]>=0.28.1",
    "mautrix>=0.20.7",
    "pycryptodome>=3.23.0",
    "pyfaye>=0.1.0",
    "python-olm>=3.2.16",
    "ruamel-yaml>=0.18.10",
    "unpaddedbase64>=2.1.0",
]
